creusot/tests/should_fail/prusti/invalid_state/pre_logic_expiry.stderr
error: 'pre can only be used in specifications of program functions
 --> pre_logic_expiry.rs:5:16
  |
5 | #[after_expiry('pre, result == x)]
  |                ^^^^

error: aborting due to 1 previous error

